--- a/src/components/DonateButton.astro
+++ b/src/components/DonateButton.astro
@@ -2,14 +2,13 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<div>
+<button type="button" aria-label="Donate to Dublin Corner Lot">
   <a
     href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
-    aria-label="Donate to Dublin Corner Lot"
     class="flex items-center justify-center gap-3 border-2 border-current bg-green-500 px-6 py-4 font-extrabold uppercase"
     target="_blank"
   >
     <Icon name="donate" class="size-8" />
     <span>Donate Now</span>
   </a>
-</div>
+</button>
